// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`appends records via multiple appenders.: console logs 1`] = `"[2012-01-31T18:33:22.011-05:00][INFO ][some-context] You know, just for your info."`;

exports[`appends records via multiple appenders.: file logs 1`] = `
"[2012-01-31T13:33:22.011-05:00][WARN ][tests] Config is not ready!
"
`;

exports[`appends records via multiple appenders.: file logs 2`] = `
"[2012-01-31T08:33:22.011-05:00][ERROR][tests.child] Too bad that config is not ready :/
"
`;

exports[`asLoggerFactory() only allows to create new loggers. 1`] = `
Object {
  "@timestamp": "2012-01-30T22:33:22.011-05:00",
  "ecs": Object {
    "version": "8.0.0",
  },
  "log": Object {
    "level": "TRACE",
    "logger": "test.context",
  },
  "message": "buffered trace message",
  "process": Object {
    "pid": Any<Number>,
  },
}
`;

exports[`asLoggerFactory() only allows to create new loggers. 2`] = `
Object {
  "@timestamp": "2012-01-30T17:33:22.011-05:00",
  "ecs": Object {
    "version": "8.0.0",
  },
  "log": Object {
    "level": "INFO",
    "logger": "test.context",
  },
  "message": "buffered info message",
  "process": Object {
    "pid": Any<Number>,
  },
  "some": "value",
}
`;

exports[`asLoggerFactory() only allows to create new loggers. 3`] = `
Object {
  "@timestamp": "2012-01-30T12:33:22.011-05:00",
  "ecs": Object {
    "version": "8.0.0",
  },
  "log": Object {
    "level": "FATAL",
    "logger": "test.context",
  },
  "message": "buffered fatal message",
  "process": Object {
    "pid": Any<Number>,
  },
}
`;

exports[`flushes memory buffer logger and switches to real logger once config is provided: buffered messages 1`] = `
Object {
  "@timestamp": "2012-02-01T09:33:22.011-05:00",
  "ecs": Object {
    "version": "8.0.0",
  },
  "log": Object {
    "level": "INFO",
    "logger": "test.context",
  },
  "message": "buffered info message",
  "process": Object {
    "pid": Any<Number>,
  },
  "some": "value",
}
`;

exports[`flushes memory buffer logger and switches to real logger once config is provided: new messages 1`] = `
Object {
  "@timestamp": "2012-01-31T23:33:22.011-05:00",
  "ecs": Object {
    "version": "8.0.0",
  },
  "log": Object {
    "level": "INFO",
    "logger": "test.context",
  },
  "message": "some new info message",
  "process": Object {
    "pid": Any<Number>,
  },
}
`;

exports[`uses \`root\` logger if context name is not specified. 1`] = `
Array [
  Array [
    "[2012-01-31T03:33:22.011-05:00][INFO ][root] This message goes to a root context.",
  ],
]
`;

exports[`uses default memory buffer logger until config is provided 1`] = `
Object {
  "context": "test.context",
  "level": LogLevel {
    "id": "trace",
    "value": 7,
  },
  "message": "trace message",
  "meta": undefined,
  "pid": Any<Number>,
  "spanId": undefined,
  "timestamp": 2012-02-01T14:33:22.011Z,
  "traceId": undefined,
  "transactionId": undefined,
}
`;

exports[`uses default memory buffer logger until config is provided 2`] = `
Object {
  "context": "test.context2",
  "level": LogLevel {
    "id": "fatal",
    "value": 2,
  },
  "message": "fatal message",
  "meta": Object {
    "some": "value",
  },
  "pid": Any<Number>,
  "spanId": undefined,
  "timestamp": 2012-02-01T14:33:22.011Z,
  "traceId": undefined,
  "transactionId": undefined,
}
`;
